--- a/src/Pages/Inventory/Layout/InventoryLayout.css
+++ b/src/Pages/Inventory/Layout/InventoryLayout.css
@@ -28,10 +28,10 @@
 @media (max-width: 700px) {
     .inventory-page {
         padding-top: 5em;
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
+        height: 100%;
         flex: none;
-        overflow: hidden;
+        overflow-y: scroll;
 
         display: flex;
         align-items: center;
