--- a/src/Pages/Inventory/Views/CardsView/CardsView.css
+++ b/src/Pages/Inventory/Views/CardsView/CardsView.css
@@ -1,7 +1,7 @@
 .inventory-cards-container {
     margin: 0;
     width: 100%;
-    height: 100%;
+    height: 90%;
 
     list-style: none;
     display: flex;
@@ -31,9 +31,11 @@ p {
 }
 
 @media (max-width: 700px) {
+
+
     .inventory-cards-container {
         width: 100%;
-        height: 120%;
+        height: 80%;
 
         margin: 0;
 
@@ -41,7 +43,6 @@ p {
         flex-direction: row;
         align-items: center;
         justify-content: center;
-
-        overflow-y: scroll;
+        overflow: visible;
     }
 }
