--- a/src/Pages/MyGarage/MyGarageView.css
+++ b/src/Pages/MyGarage/MyGarageView.css
@@ -44,5 +44,10 @@ p {
 @media (max-width: 700px) {
     .mygarage-page {
         padding-top: 6em;
+        overflow-y: scroll;
+    }
+
+    .mygarage-cards-container {
+        overflow: visible;
     }
 }
