--- a/src/Shared/CarDetailsCard/CarDetailsCard.css
+++ b/src/Shared/CarDetailsCard/CarDetailsCard.css
@@ -1,7 +1,7 @@
 .car-details-card {
     width: 100%;
     min-height: 100%;
-    margin-top: 1em;
+    margin-top: 0;
     color: var(--text-color);
     margin-bottom: 1em;
     border-bottom: 1px solid #212121;
