--- a/src/index.css
+++ b/src/index.css
@@ -8,10 +8,6 @@
   box-sizing: border-box;         /* Opera/IE 8+ */
 }
 
-html {
-  overflow: hidden;
-}
-
 body {
   margin: 0;
   padding: 0;
